--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -582,6 +582,7 @@
 
 .news_item {
     width: 24%;
+    margin-top: 5%;
 }
 
 .news_item img {
@@ -957,12 +958,11 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 5%;
     flex-wrap: wrap;
 }
 
 .detail-more_info_item {
-    margin-top: 10px;
+    margin-top: 5%;
 }
 
 .detail-more_info_item span {
@@ -1034,4 +1034,36 @@ footer {
 
 .detail-more_info_item.view i {
     margin-right: 5px;
+}
+
+.detail_post-heading {
+    margin-bottom: 20px;
+}
+
+.detail_post-text_info {
+    margin: 14px 0;
+}
+
+.detail_post-text_info {
+    color: var(--color-dark);
+}
+
+.detail_post-text_info b {
+    font-family: 'Roboto M';
+    font-weight: normal;
+    color: var(--color-dark);
+}
+
+.detail_post-text_info a {
+    color: var(--color-primary);
+}
+
+.detail_post-text_info a:hover {
+    text-decoration: underline;
+}
+
+.detail_post-img_wrapper img {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 5%;
 }
