--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -1067,3 +1067,62 @@ footer {
     border-radius: 10px;
     margin-top: 5%;
 }
+
+.contact-form h1 {
+    margin-bottom: 20px;
+}
+
+.contact-form input,
+.contact-form select {
+    width: 100%;
+    padding: 12px 18px;
+    font-size: var(--size-text);
+    margin: 10px 0;
+    outline: none;
+    border: 1px solid var(--color-primary);
+    border-radius: 4px;
+}
+
+.contact-form input::placeholder,
+.contact-form select::placeholder {
+    color: var(--color-primary);
+}
+
+.contact-form button {
+    width: 100%;
+    padding: 12px 18px;
+    font-size: var(--size-text);
+    margin: 10px 0;
+    outline: none;
+    border-radius: 4px;
+    border: 1px solid var(--color-primary);
+    background: var(--color-white);
+    color: var(--color-primary);
+    cursor: pointer;
+}
+
+.contact-form button:hover {
+    transform: scale(0.9);
+    color: var(--color-white);
+    background: var(--color-primary);
+}
+
+.contact-number_wrapper {
+    display: flex;
+    align-items: center;
+    border: 1px solid var(--color-primary);
+    padding: 12px 18px;
+    border-radius: 10px;
+}
+
+.contact-number_wrapper input {
+    padding: 0;
+    margin: 0;
+    border: none;
+    border-radius: none;
+}
+
+.contact-number_wrapper label {
+    display: inline-block;
+    margin-right: 5px;
+}
