deleting aos sscripts and links then adding search result

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -586,6 +586,7 @@
 .main-hero_action_post a {
     display: flex;
     align-items: center;
+    font-size: var(--size-text-small);
     color: var(--color-dark);
 }
 
