changin and fixing

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -165,7 +165,7 @@
 
 .header_navigation_list {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
     flex-wrap: wrap;
     position: relative;
