--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                                             <div class="main-hero_head_info">
                                                 {{ govern.content|safe }}
                                             </div>
-                                            <a href="#" class="main-hero_contact_link" role="button">Murojaat
+                                            <a href="{% url 'common:contact' %}" class="main-hero_contact_link" role="button">Murojaat
                                                 yuborish</a>
                                         </div>
                                     </div>
@@ -108,7 +108,7 @@
                                             <div class="main-hero_head_info">
                                                 {{ peop.content|safe }}
                                             </div>
-                                            <a href="#" class="main-hero_contact_link" role="button">Murojaat
+                                            <a href="{% url 'common:contact' %}" class="main-hero_contact_link" role="button">Murojaat
                                                 yuborish</a>
                                         </div>
                                     </div>
