--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -117,13 +117,16 @@
             <div class="container">
                 <ul class="footer_list">
                     <li class="footer_item">
+                        <p class="footer_title footer_text">
+                            ANDIJON VILOYATI HOKIMLIGI © 2009-2023
+                        </p>
                         <p class="footer_description footer_text">
                             Materiallardan foydalanishda <br> Toshkent viloyati hokimligi <br> veb-saytiga havola
                             qoying!
                         </p>
-                        <a href="./site_map.html" class="footer_map_link">
+                        <!-- <a href="./site_map.html" class="footer_map_link">
                             SAYT XARITASI
-                        </a>
+                        </a> -->
                     </li>
                     <li class="footer_item">
                         <div class="footer_socials">
@@ -143,12 +146,19 @@
         </div>
 
     </footer>
-    <p class="footer_title footer_text">
-        ANDIJON VILOYATI HOKIMLIGI © 2009-2023
-    </p>
+    {% if messages %}
+    <div onclick="this.style.display = 'none'" style="background-color: rgba(0,0,0,0.5);width: 100%;height: 100vh;position: fixed;top:0;left:0;display: flex;align-items: center;justify-content: center;z-index:111111111">
+        {% for message in messages %}
+            <h3 style="font-size: 25px;padding:20px 30px;border-radius:10px;background:white;color:black" {% if message.tags %}class="{{ message.tags }}"{% endif %}>
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+                {{ message }}
+            </h3>
+            {% endfor %}
+        {% endif %}
+    </div>    
     <script>
         var currentPage = location.href;
-        var allA = document.getElementsByTagName('A');
+        var allA = document.getElementsByTagName('a');
         for(var i = 0, len = allA.length; i < len; i++) {
             if(allA[i].href == currentPage) {
                 allA[i].classList.add("active");
