--- a/templates/detail_news.html
+++ b/templates/detail_news.html
@@ -1,4 +1,6 @@
 {% extends 'wrapper.html' %}
+{% load i18n %}
+{% block title %}| {{ detail.title }}{% endblock %}
 {% block content %}
 <main>
     <div class="detail_reg-hero">
@@ -9,7 +11,7 @@
                         <ul class="nav_link_list">
                             <li class="nav_link_item">
                                 <a href="{% url 'common:news' %}">
-                                    Yangiliklar
+                                    {% trans 'Yangiliklar' %}
                                 </a>
                             </li>
                         </ul>
@@ -19,11 +21,11 @@
                         <li>
                             <div class="links">
                                 <span class="link">
-                                    <a href="#">Bosh sahifa</a>
+                                    <a href="/">{% trans 'Bosh sahifa' %}</a>
                                 </span>
                                 <span class="link">
                                     <a href="/news/">
-                                        <i class="fa-regular fa-chevrons-right"></i> Yangiliklar
+                                        <i class="fa-regular fa-chevrons-right"></i> {% trans 'Yangiliklar' %}
                                     </a>
                                 </span>
                                 <span class="link">
@@ -48,7 +50,7 @@
                                     <span>{{ detail.created_at }}</span>
                                 </li>
                                 <li class="detail-more_info_item share">
-                                    <span class="detail-share_text">Bo`lishish:</span>
+                                    <span class="detail-share_text">{% trans 'Bo`lishish' %}:</span>
 
                                     <a href="http://www.facebook.com/sharer.php?u=" class="detail-share_icon facebook">
                                         <i class="fa-brands fa-facebook-f"></i>
@@ -64,7 +66,7 @@
                                 </li>
                                 <li class="detail-more_info_item download">
                                     <a href="{{ pdf.pdf_file.url }}">
-                                        Yuklash
+                                        {% trans 'Yuklash' %}
                                         <span class="detail-share_icon ">
                                             <i class="fa-solid fa-download"></i>
                                         </span>
