--- a/staticfiles/assets/css/responsive.css
+++ b/staticfiles/assets/css/responsive.css
@@ -62,7 +62,7 @@
         margin-top: 10px;
     }
 
-    .header_settings form {
+    .header_form_wrapper{
         display: flex;
         width: 100%;
         align-items: center;
@@ -202,6 +202,10 @@
 
     .main-hero_numbers_item {
         padding: 12px;
+    }
+
+    .main-numbers {
+        width: 100%;
     }
 }
 
