--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,21 +20,18 @@
         </div>
 
     </main>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.7/jquery.inputmask.min.js"></script>
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("#id_phone").inputmask("(99)999-99-99");
-            $("#id_birthday").inputmask("99.99.9999");
-        });
-    </script>
+    {% endblock %}
 
     
-<script>
-    AOS.init();
-</script>
-
-    {% endblock %}
+    {% block scripts %}
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.7/jquery.inputmask.min.js"></script>
+        
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $("#id_phone").inputmask("(99)999-99-99");
+                $("#id_birthday").inputmask("99.99.9999");
+            });
+        </script>
+    {% endblock scripts %}
