--- a/templates/news.html
+++ b/templates/news.html
@@ -48,13 +48,15 @@
         </div>
 
     </main>
-    <script src="{% static 'assets/lib/js/sticky.js' %}"></script>
-    <script type="text/javascript">
-        var a = new StickySidebar('#sidebar', {
-            topSpacing: 50,
-            bottomSpacing: -20,
-            containerSelector: '.container',
-            innerWrapperSelector: '.sidebar__inner'
-        });
-    </script>
     {% endblock content %}
+
+    {% block scripts %}
+        <script type="text/javascript">
+            var a = new StickySidebar('#sidebar', {
+                topSpacing: 50,
+                bottomSpacing: -20,
+                containerSelector: '.container',
+                innerWrapperSelector: '.sidebar__inner'
+            });
+        </script>
+    {% endblock scripts %}
